# yashodeep_portfolio_chatbot

./: README.md  app.py  data.txt  main.py  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
